objects/disco__Discovery_Rule__c.object
<CustomObject>
    <description>The logic for creating a Discovery for a Form Template</description>
    <fields>
        <fullName>disco__Discovery_Field_For_Discovery__c</fullName>
        <label>Discovery Field For Discovery</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Field_For_Form__c</fullName>
        <label>Discovery Field For Form</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Discovery Type</label>
        <referenceTo>disco__Discovery_Type__c</referenceTo>
        <relationshipLabel>Discovery Rules</relationshipLabel>
        <relationshipName>Discovery_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__For_Discovery_Rule_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this discovery rule has been designated to be part of a  discovery rulegroup</description>
        <inlineHelpText>this discovery rule has been designated to be part of a discovery rule group</inlineHelpText>
        <label>For Discovery Rule Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Discovery Rules</relationshipLabel>
        <relationshipName>Discovery_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Managed_Template_RandomId__c</fullName>
        <description>RandomId of managed template if the rule was copied in from a managed template</description>
        <externalId>true</externalId>
        <inlineHelpText>RandomId of managed template if the rule was copied in from a managed template</inlineHelpText>
        <label>Managed Template RandomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Operator_1__c</fullName>
        <label>Operator 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Than</fullName>
                    <default>true</default>
                    <label>Greater Than</label>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Equal To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Operator_2__c</fullName>
        <label>Operator 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Threshold_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Threshold 1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Threshold_2__c</fullName>
        <label>Threshold 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discovery Rule</label>
    <nameField>
        <label>Discovery Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>